--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -87,25 +87,7 @@ const posts = (await getCollection('blog')).sort(
   </head>
   <body>
     <Header />
-    <main>
-      <section>
-        <ul>
-          {
-            posts.map((post) => (
-              <li>
-                <a href={`/blog/blog/${post.slug}/`}>
-                  <img width={720} height={360} src={post.data.heroImage} alt="" />
-                  <h4 class="title">{post.data.title}</h4>
-                  <p class="date">
-                    <FormattedDate date={post.data.pubDate} />
-                  </p>
-                </a>
-              </li>
-            ))
-          }
-        </ul>
-      </section>
-    </main>
+    <p>TEST TEST TEST TEST</p>
     <Footer />
   </body>
 </html>
